# perch-runner

./: .gitignore  Dockerfile  Dockerfile_alpine  Docs.md  README.md  README_original.md  build.sh  embed_audio.py  embed_audio_slim.py  launch_notebook.sh  pyproject.toml  pyproject_bak.toml  requirements-host.txt  run_docker_interactive.sh  run_embed.sh
.devcontainer/: devcontainer.json
.github/workflows/: build.yml  zip_use_scripts.yml
models/mgw/: mgw_v05.keras  mgw_v05.keras.labels.json
scripts/: Readme.md  analyze.ps1  analyze.sh  classify.ps1  classify.sh  embed.ps1  embed.sh  instructions.md  run_tests.sh
src/: active_learning.py  active_learning_from_parquet.ipynb  active_learning_from_parquet.py  active_learning_original.py  app.py  batch.py  baw_utils.py  config.py  data_frames.py  download_model.py  embed_audio.py  embed_audio_slim.py  inference_parquet.py  inference_slim.py  train_linear_model_slim.py
src/default_configs/: classify.yaml  classify.yml  embed.yml  mgw.classify.yml  pw.classify.yml
src/retired/: active_learning_from_parquet_old.py  inference.py  inference_slim.py  train_linear_model.py
src/transcode_embeddings/: transcode_embeddings.py
tests/: Readme.md  conftest.py  test_data_frames.py  test_embed.py
tests/app_tests/: conftest.py  test_app.py  test_baw_utils.py  test_classify.py  test_config.py  test_embed.py  test_transcode.py
tests/docker_tests/: test_analyze.py  test_classify.py  test_embed.py
tests/files/: batch_files.csv
tests/fixtures/: clear_output_files.py  embeddings.py
tests/shared_fixtures/: helpers.py  (+1 more)
(+11 files in other folders)
