[tool.poetry]
name = "perch_runner"
version = "0.1.0"
description = "Scripts to use perch basic functionality"
authors = ["Phil Eichinski <philip.eichinski@qut.edu.au>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
chirp = {git = "https://github.com/google-research/perch.git", rev = "3746672d406c6cfe48acb0e725248cea05f57445"}
librosa = "^0.10.1"
numpy = "^1.24.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-mock = "^3.12.0"

[build-system]
requires = ["poetry-core>=1.5.0"]
build-backend = "poetry.core.masonry.api"